--- a/DesktopClient/App.axaml
+++ b/DesktopClient/App.axaml
@@ -1,7 +1,7 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:examClientMVVM"
-             x:Class="examClientMVVM.App">
+             xmlns:local="using:DesktopClient"
+             x:Class="DesktopClient.App">
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
@@ -9,13 +9,16 @@
     <Application.Styles>
         <FluentTheme Mode="Light"/>
 		<StyleInclude Source="/Styles/NotificationCard.axaml"/>
+		<StyleInclude Source="/Styles/Button.axaml"/>
     </Application.Styles>
 	
 	<Application.Resources>
 		<ResourceDictionary>
 			<SolidColorBrush x:Key="Primary" Color="#111111"/>
 			<SolidColorBrush x:Key="New" Color="#BC31EA"/>
-			<SolidColorBrush x:Key="PrimaryBackground" Color="#EEEEEE"/>
+			<SolidColorBrush x:Key="Hover" Color="#767676"/>
+			<SolidColorBrush x:Key="Background" Color="#F4F4F4"/>
+			<SolidColorBrush x:Key="Foreground" Color="#EEEEEE"/>
 		</ResourceDictionary>
 	</Application.Resources>
 </Application>
