--- a/DesktopClient/Views/LoginForm.axaml
+++ b/DesktopClient/Views/LoginForm.axaml
@@ -1,16 +1,18 @@
 <UserControl
-    x:Class="examClientMVVM.Views.LoginForm"
+    x:Class="DesktopClient.Views.LoginForm"
     xmlns="https://github.com/avaloniaui"
-	xmlns:vm="using:examClientMVVM.ViewModels"
-	xmlns:cc="using:examClientMVVM.CustomControls"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="using:DesktopClient.ViewModels"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
 
-    <Grid>
+	
+
+
+	<Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.25*" />
             <ColumnDefinition Width="*" />
@@ -21,48 +23,38 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-      
+
+		<StackPanel Grid.Column="2" Grid.Row="1">
 			<TextBlock
-				Grid.Row="2"
-            Grid.Column="2"
-            Margin="10"
+                Margin="20"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
                 FontSize="30"
                 Text="Welcome" />
-      
-            <TextBox
-                Grid.Row="3"
-                Grid.Column="2"
+
+			<TextBox
+			    Watermark="Enter your email"
+				Width="200"
+				Margin="10"
 				VerticalAlignment="Center"
-                Width="200"
-				MaxHeight="20"
-                Margin="8"
-				Text="{Binding Email}"/>
-     
-            <TextBox
-                Grid.Row="4"
-                Grid.Column="2"
-				MaxHeight="20"
-                Width="200"
-                Margin="8"
-				Text="{Binding Password}"/>
-     
-		<Button
-			HorizontalAlignment="Center"
-			HorizontalContentAlignment="Center"
-            Grid.Row="5"
-            Grid.Column="2"
-			
-            Margin="10,10"
-            Padding="60,5"
-            Content="Login"
-			Command="{Binding LoginCommand}"/>
+				Text="{Binding Email}" />
+
+			<TextBox
+				Watermark="Enter your password"
+				Width="200"
+				Margin="10"
+				Text="{Binding Password}" />
+
+			<Button
+				Margin="20"
+				Padding="60,5"
+				HorizontalAlignment="Center"
+				HorizontalContentAlignment="Center"
+				Command="{Binding LoginCommand}"
+				Content="Login" />
+		</StackPanel>
+        
     </Grid>
-	
+
 </UserControl>
