--- a/DesktopClient/Views/MainWindow.axaml
+++ b/DesktopClient/Views/MainWindow.axaml
@@ -1,19 +1,19 @@
-<Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:examClientMVVM.ViewModels"
-		xmlns:cc="using:examClientMVVM.CustomControls"
-		xmlns:views="using:examClientMVVM.Views"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="examClientMVVM.Views.MainWindow"
-        Icon="/Assets/avalonia-logo.ico"
-		Initialized="Loaded"
-        Title="examClientMVVM">
+<Window
+    x:Class="DesktopClient.Views.MainWindow"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:views="using:DesktopClient.Views"
+    xmlns:vm="using:DesktopClient.ViewModels"
+    Title="examClientMVVM"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    Icon="/Assets/avalonia-logo.ico"
+    Initialized="Loaded"
+    mc:Ignorable="d">
 
-    <Design.DataContext>
-        <vm:MainWindowViewModel/>
-    </Design.DataContext>
-    <views:LoginForm/>
+    
+    <views:LoginForm />
 
 </Window>
