feat!: add navigation manager

--- a/desktop-avalonia-client/MainWindow.axaml
+++ b/desktop-avalonia-client/MainWindow.axaml
@@ -1,11 +1,10 @@
 <Window
-    x:Class="DesktopClient.Views.MainWindow"
+    x:Class="desktopAvaloniaClient.Views.MainWindow"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:views="using:DesktopClient.Views"
-	xmlns:vm="using:DesktopClient.ViewModels"
+    xmlns:views="using:desktopAvaloniaClient.Views"
     Title="examClientMVVM"
     d:DesignHeight="450"
     d:DesignWidth="800"
