--- a/desktop-avalonia-client/App.axaml
+++ b/desktop-avalonia-client/App.axaml
@@ -1,11 +1,7 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:DesktopClient"
-             x:Class="DesktopClient.App">
-	<Application.DataTemplates>
-		<local:ViewLocator/>
-	</Application.DataTemplates>
-
+             x:Class="desktopAvaloniaClient.App">
+  
 	<Application.Styles>
 		<FluentTheme Mode="Light"/>
 		<StyleInclude Source="/Styles/NotificationCard.axaml"/>
