--- a/desktop-avalonia-client/Views/LoginForm.axaml
+++ b/desktop-avalonia-client/Views/LoginForm.axaml
@@ -1,11 +1,10 @@
 <UserControl
-    x:Class="DesktopClient.Views.LoginForm"
+    x:Class="desktopAvaloniaClient.Views.LoginForm"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:vm="using:DesktopClient.ViewModels"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:cm="using:DesktopClient.CustomControls"
+	xmlns:cm="using:desktopAvaloniaClient.CustomControls"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d"
