--- a/DesktopClient/App.axaml
+++ b/DesktopClient/App.axaml
@@ -11,6 +11,7 @@
 		<StyleInclude Source="/Styles/NotificationCard.axaml"/>
 		<StyleInclude Source="/Styles/Button.axaml"/>
 		<StyleInclude Source="/Styles/TextBox.axaml"/>
+		<StyleInclude Source="avares://AvaloniaProgressRing/Styles/ProgressRing.xaml"/>
 	</Application.Styles>
 
 	<Application.Resources>
