--- a/DesktopClient/Views/EnterCode.axaml
+++ b/DesktopClient/Views/EnterCode.axaml
@@ -7,14 +7,33 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="300"
     d:DesignWidth="500"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+	AttachedToVisualTree="Loaded">
     <Border
+		x:Name="BorderToAnimate"
 		BoxShadow="0 0 9 0 Gray"
         Width="300"
         Height="260"
         Background="White"
         BorderBrush="{DynamicResource Primary}"
         BorderThickness="0.8">
+		<Border.Styles>
+			<Style Selector="Border.Fade">
+				<Style.Animations>
+					<Animation Duration="0:0:2">
+						<KeyFrame Cue="0%">
+							<Setter Property="Opacity" Value="0"></Setter>
+						</KeyFrame>
+						<KeyFrame Cue="30%">
+							<Setter Property="Opacity" Value="0.8"></Setter>
+						</KeyFrame>
+						<KeyFrame Cue="100%">
+							<Setter Property="Opacity" Value="1"></Setter>
+						</KeyFrame>
+					</Animation>
+				</Style.Animations>
+			</Style>
+		</Border.Styles>
         <StackPanel>
             <TextBlock
                 Margin="15,15,15,5"
