--- a/DesktopClient/Views/LoginForm.axaml
+++ b/DesktopClient/Views/LoginForm.axaml
@@ -9,15 +9,33 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d"
-	FontFamily="Work Sans">
-
+	FontFamily="Work Sans"
+	AttachedToVisualTree="Loaded">
 	<Border
+		x:Name="BorderToAnimate"
 		BoxShadow="0 0 9 0 Gray"
         Width="300"
         Height="350"
         Background="White"
         BorderBrush="{DynamicResource Primary}"
         BorderThickness="0.8">
+		<Border.Styles>
+			<Style Selector="Border.Fade">
+				<Style.Animations>
+					<Animation Duration="0:0:2">
+						<KeyFrame Cue="0%">
+							<Setter Property="Opacity" Value="0"></Setter>
+						</KeyFrame>
+						<KeyFrame Cue="30%">
+							<Setter Property="Opacity" Value="0.8"></Setter>
+						</KeyFrame>
+						<KeyFrame Cue="100%">
+							<Setter Property="Opacity" Value="1"></Setter>
+						</KeyFrame>
+					</Animation>
+				</Style.Animations>
+			</Style>
+		</Border.Styles>
 		<Grid ColumnDefinitions="0.25*,1.5*,0.25*" RowDefinitions="0.25*,1.5*,0.25*">
 			<StackPanel Grid.Row="1" Grid.Column="1">
 				<TextBlock Text="{Binding UrlPathSegment}"/>
