fix! :  major refactoring for the navigation implementation

--- a/DesktopClient/CustomControls/LoadingScreen.axaml
+++ b/DesktopClient/CustomControls/LoadingScreen.axaml
@@ -8,25 +8,10 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <Grid RowDefinitions="*,*">
-        <Border
-            Grid.RowSpan="2"
-            Background="Black"
-            Opacity="0.5" />
-        <progRing:ProgressRing
-			VerticalAlignment="Bottom"
-            Width="100"
-            Height="100"
-            Foreground="{DynamicResource Primary}"
-            IsActive="True"
-			/>
-        <TextBlock
-			Margin="20"
-			FontSize="20"
-			FontWeight="Bold"
-            Grid.Row="1"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Top"
-            Text="Please Wait..." />
-    </Grid>
+    <progRing:ProgressRing
+		Background="Transparent"
+        Width="30"
+        Height="30"
+        Foreground="{DynamicResource Primary}"
+        IsActive="True" />
 </UserControl>
