--- a/DesktopClient/App.axaml
+++ b/DesktopClient/App.axaml
@@ -12,6 +12,7 @@
 		<StyleInclude Source="/Styles/Button.axaml"/>
 		<StyleInclude Source="/Styles/TextBox.axaml"/>
 		<StyleInclude Source="avares://AvaloniaProgressRing/Styles/ProgressRing.xaml"/>
+		<StyleInclude Source="avares://Aura.UI.FluentTheme/AuraUI.xaml"/>
 	</Application.Styles>
 
 	<Application.Resources>
@@ -22,6 +23,7 @@
 			<SolidColorBrush x:Key="Background" Color="#F4F4F4"/>
 			<SolidColorBrush x:Key="Foreground" Color="#EEEEEE"/>
 			<SolidColorBrush x:Key="Border" Color="#AAAAAA"/>
+			
 		</ResourceDictionary>
 	</Application.Resources>
 </Application>
