--- a/DesktopClient/Views/EnterCodeView.axaml
+++ b/DesktopClient/Views/EnterCodeView.axaml
@@ -1,5 +1,5 @@
 <UserControl
-    x:Class="DesktopClient.Views.EnterCode"
+    x:Class="DesktopClient.Views.EnterCodeView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,33 +7,14 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="300"
     d:DesignWidth="500"
-    mc:Ignorable="d"
-	AttachedToVisualTree="Loaded">
+    mc:Ignorable="d">
     <Border
-		x:Name="BorderToAnimate"
 		BoxShadow="0 0 9 0 Gray"
         Width="300"
         Height="260"
         Background="White"
         BorderBrush="{DynamicResource Primary}"
         BorderThickness="0.8">
-		<Border.Styles>
-			<Style Selector="Border.Fade">
-				<Style.Animations>
-					<Animation Duration="0:0:2">
-						<KeyFrame Cue="0%">
-							<Setter Property="Opacity" Value="0"></Setter>
-						</KeyFrame>
-						<KeyFrame Cue="30%">
-							<Setter Property="Opacity" Value="0.8"></Setter>
-						</KeyFrame>
-						<KeyFrame Cue="100%">
-							<Setter Property="Opacity" Value="1"></Setter>
-						</KeyFrame>
-					</Animation>
-				</Style.Animations>
-			</Style>
-		</Border.Styles>
         <StackPanel>
             <TextBlock
                 Margin="15,15,15,5"
@@ -69,6 +50,7 @@
 				Command="{Binding EnterCommand}"
                 FontSize="10"
 				Padding="35,7,35,8"/>
+			
         </StackPanel>
     </Border>
 </UserControl>
