--- a/DesktopClient/Views/MainWindow.axaml
+++ b/DesktopClient/Views/MainWindow.axaml
@@ -4,12 +4,15 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:rxui="clr-namespace:Avalonia.ReactiveUI;assembly=Avalonia.ReactiveUI"
     xmlns:views="using:DesktopClient.Views"
-	xmlns:vm="using:DesktopClient.ViewModels"
+    xmlns:vm="using:DesktopClient.ViewModels"
     Title="examClientMVVM"
     d:DesignHeight="450"
     d:DesignWidth="800"
     Icon="/Assets/avalonia-logo.ico"
     Initialized="Loaded">
-		<views:StepManager />
+
+    <rxui:RoutedViewHost PageTransition="{x:Null}" Router="{Binding Router}" />
+
 </Window>
