--- a/DesktopClient/Views/LoginFormView.axaml
+++ b/DesktopClient/Views/LoginFormView.axaml
@@ -10,17 +10,25 @@
     d:DesignWidth="800"
     FontFamily="Work Sans"
     mc:Ignorable="d">
-	
+
     <Border
-        Width="300"
-        Height="350"
+        x:Name="myBorder"
+        HorizontalAlignment="Center"
+        VerticalAlignment="Center"
         Background="White"
         BorderBrush="{DynamicResource Primary}"
         BorderThickness="0.8"
         BoxShadow="0 0 9 0 Gray">
 
-        <Grid ColumnDefinitions="0.25*,1.5*,0.25*" RowDefinitions="0.25*,1.5*,0.25*">
-            <StackPanel Grid.Row="1" Grid.Column="1">
+        <Grid
+            Margin="30,50,30,50"
+            ColumnDefinitions="0.25*,1.5*,0.25*"
+            RowDefinitions="0.25*,1.5*,0.25*">
+            <StackPanel
+                x:Name="mySatck"
+                Grid.Row="1"
+                Grid.Column="1"
+                HorizontalAlignment="Center">
                 <Image Height="60" Source="/Assets/avalonia-logo.ico" />
                 <TextBlock
                     Margin="10"
@@ -30,33 +38,41 @@
                     FontWeight="Bold"
                     Text="Login" />
                 <TextBox
-					
                     Width="200"
                     Margin="10"
                     VerticalAlignment="Center"
-					Text="{Binding Email}"
                     FontSize="12"
+                    Text="{Binding Email}"
                     Watermark="Email" />
                 <TextBox
                     Width="200"
                     Margin="10"
-					Text="{Binding Password}"
                     Classes="revealPasswordButton"
                     FontSize="12"
                     PasswordChar="•"
+                    Text="{Binding Password}"
                     Watermark="Password" />
                 <Button
-                    Margin="20"
+                    Margin="20,5,20,0"
                     Padding="60,5"
-					Command="{Binding LoginCommand}"
                     HorizontalAlignment="Center"
                     HorizontalContentAlignment="Center"
+                    Command="{Binding LoginCommand}"
                     Content="Login" />
+
+				<Button
+                    Margin="0,0,0,10"
+                    HorizontalAlignment="Center"
+                    Classes="Hyperlink"
+					Command="{Binding OpenBrowser}"
+                    ><TextBlock TextDecorations="Underline" Text="Login with browser"/></Button>
+
+
                 <ProgressBar
                     x:Name="progressBar"
                     Foreground="{DynamicResource Primary}"
                     IsIndeterminate="True"
-                    IsVisible="False" />
+                    IsVisible="{Binding Executing^}" />
             </StackPanel>
         </Grid>
     </Border>
