--- a/DesktopClient/Styles/Button.axaml
+++ b/DesktopClient/Styles/Button.axaml
@@ -1,11 +1,11 @@
 ﻿<Styles xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Design.PreviewWith>
-        <Border  Padding="20">
-            <Button  Content="Create New" />
+        <Border Padding="20">
+            <Button Content="Create New" />
         </Border>
     </Design.PreviewWith>
     <Styles.Resources>
-        <Thickness x:Key="ButtonPadding">35,15,35,16</Thickness>
+        <Thickness x:Key="ButtonPadding">20,10,20,11</Thickness>
     </Styles.Resources>
     <Style Selector="Button">
         <Setter Property="Background" Value="{DynamicResource Primary}" />
@@ -14,7 +14,7 @@
         <Setter Property="BorderBrush" Value="{DynamicResource Primary}" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="CornerRadius" Value="4" />
-        <Setter Property="Padding" Value="{DynamicResource ButtonPadding}" />
+        <Setter Property="Padding" Value="20,10,20,11" />
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="FontWeight" Value="Normal" />
@@ -52,9 +52,9 @@
     </Style>
 
     <Style Selector="Button:disabled">
-		<Setter Property="Background" Value="{DynamicResource Primary}"/>
-		<Setter Property="Foreground" Value="{DynamicResource Foreground}" />
-        <Setter Property="Opacity" Value="0.8"/>
+        <Setter Property="Background" Value="{DynamicResource Primary}" />
+        <Setter Property="Foreground" Value="{DynamicResource Foreground}" />
+        <Setter Property="Opacity" Value="0.8" />
     </Style>
 
     <Style Selector="Button, RepeatButton, ToggleButton">
