--- a/DesktopClient/Views/EnterCodeView.axaml
+++ b/DesktopClient/Views/EnterCodeView.axaml
@@ -9,12 +9,13 @@
     d:DesignWidth="500"
     mc:Ignorable="d">
     <Border
-		BoxShadow="0 0 9 0 Gray"
         Width="300"
         Height="260"
+		CornerRadius="4"
         Background="White"
         BorderBrush="{DynamicResource Primary}"
-        BorderThickness="0.8">
+        BorderThickness="1.5"
+        BoxShadow="0 0 9 0 Gray">
         <StackPanel>
             <TextBlock
                 Margin="15,15,15,5"
@@ -31,26 +32,30 @@
                 FontSize="35"
                 Value="fa-key" />
             <TextBlock
-                Margin="5 5 5 1"
+                Margin="5,5,5,1"
                 HorizontalAlignment="Center"
                 FontSize="8"
                 FontWeight="Regular"
                 Text="EXAM CODE:" />
             <TextBox
                 Width="150"
-				VerticalContentAlignment="Center"
-				FontSize="12"
-				Text="{Binding Code}"
                 Margin="20,0,20,25"
                 HorizontalAlignment="Center"
+                VerticalContentAlignment="Center"
+                FontSize="12"
+                Text="{Binding Code}"
                 Watermark="Exam Code" />
             <Button
+                Padding="35,7,35,8"
                 HorizontalAlignment="Center"
+                Command="{Binding EnterCommand}"
                 Content="ENTER EXAM"
-				Command="{Binding EnterCommand}"
-                FontSize="10"
-				Padding="35,7,35,8"/>
-			
+                FontSize="10" />
+            <ProgressBar
+                Margin="20"
+                Foreground="{DynamicResource Primary}"
+                IsIndeterminate="True"
+				IsVisible="{Binding IsExecuting^}"/>
         </StackPanel>
     </Border>
 </UserControl>
