--- a/DesktopClient/Views/LoginFormView.axaml
+++ b/DesktopClient/Views/LoginFormView.axaml
@@ -17,7 +17,8 @@
         VerticalAlignment="Center"
         Background="White"
         BorderBrush="{DynamicResource Primary}"
-        BorderThickness="0.8"
+        BorderThickness="1.5"
+		CornerRadius="4"
         BoxShadow="0 0 9 0 Gray">
 
         <Grid
