--- a/DesktopClient/Views/WaitingRoomView.axaml
+++ b/DesktopClient/Views/WaitingRoomView.axaml
@@ -1,8 +1,67 @@
-<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="DesktopClient.Views.WaitingRoomView">
-	this is the waiting room
+<UserControl
+    x:Class="DesktopClient.Views.WaitingRoomView"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:gif="clr-namespace:AvaloniaGif;assembly=DesktopClient"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="500"
+    d:DesignWidth="900"
+    mc:Ignorable="d">
+    <Border
+        Width="800"
+        Height="450"
+        Background="White"
+        BorderBrush="{DynamicResource Primary}"
+        BorderThickness="1.5"
+        BoxShadow="0 0 9 0 Gray"
+        CornerRadius="4">
+        <StackPanel
+            Grid.Column="1"
+            Grid.ColumnSpan="3"
+            Margin="0,20,0,40">
+            <TextBlock
+                HorizontalAlignment="Center"
+                FontSize="30"
+                FontWeight="Bold"
+                Text="You’re all set up 😀" />
+            <TextBlock
+                Margin="0,40,0,10"
+                HorizontalAlignment="Center"
+                FontSize="16"
+                FontWeight="Bold"
+                Text="WAITING ROOM" />
+            <TextBlock
+                HorizontalAlignment="Center"
+                FontSize="12"
+                Text="you and all your friends are waiting for the exam to start" />
+            <TextBlock
+                HorizontalAlignment="Center"
+                FontSize="12"
+                Text="dont worry! " />
+            <TextBlock
+                HorizontalAlignment="Center"
+                FontSize="12"
+                Text="once the exams starts you’ll be directed automatically to the exam page" />
+            <TextBlock
+                Margin="0,40,0,0"
+                HorizontalAlignment="Center"
+                FontSize="25"
+                FontWeight="Bold"
+                Text="TIME LEFT TO EXAM" />
+            <TextBlock
+                HorizontalAlignment="Center"
+                FontSize="25"
+                FontWeight="Bold"
+                Text="{Binding ExamTimer, StringFormat=\{0:h\\:mm\\:ss\}}" />
+
+            <gif:GifImage
+				Margin="30 0 0 0"
+                Height="150"
+                SourceUri="resm:DesktopClient.Assets.WaitingDog.gif"
+                Stretch="Uniform"
+                StretchDirection="Both" />
+
+        </StackPanel>
+    </Border>
 </UserControl>
