--- a/DesktopClient/Views/SystemRequirmentsView.axaml
+++ b/DesktopClient/Views/SystemRequirmentsView.axaml
@@ -22,155 +22,165 @@
         Background="White"
         BorderBrush="{DynamicResource Primary}"
         BorderThickness="1.5"
-		CornerRadius="4"
-        BoxShadow="0 0 9 0 Gray">
-        <Grid ColumnDefinitions="0.5*,4*,4*,0.5*" RowDefinitions="0.5*,4*,*,0.5*">
-            <TextBlock
-                Grid.Column="1"
-                Grid.ColumnSpan="2"
-                Margin="10,20,10,15"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                FontSize="16"
-                FontWeight="Bold"
-                Text="EQUIPMENT CHECK" />
-            <TextBlock
-                Grid.Column="1"
-                Grid.ColumnSpan="2"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Bottom"
-                FontSize="12"
-                Text="We will check your internet connection, video and microphone" />
-            <Border
-                Grid.Row="1"
-                Grid.Column="1"
-                Width="300"
-                Height="170"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Background="{DynamicResource Background}"
-                BorderBrush="{DynamicResource Primary}"
-                BorderThickness="1.5"
-				CornerRadius="4"
-				>
-                <Image Source="{Binding CameraBitmap}" />
-            </Border>
-            <StackPanel
-                Grid.Row="1"
-                Grid.Column="2"
-                Margin="10,45,10,0">
-                <TextBlock FontWeight="SemiBold" Text="Video source" />
-                <StackPanel Orientation="Horizontal">
-                    <ComboBox
-                        Width="250"
-                        Margin="0,5,0,15"
-                        HorizontalContentAlignment="Left"
-                        Items="{Binding VideoDevices}"
-                        SelectedIndex="0">
-                        <ComboBox.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
-                                    <i:Icon Margin="0,0,5,0" Value="fa-camera" />
-                                    <TextBlock Text="{Binding}" />
-                                </StackPanel>
-                            </DataTemplate>
-                        </ComboBox.ItemTemplate>
-                    </ComboBox>
-                    <ProgressRing
-                        Width="30"
-                        Height="30"
-                        Margin="8,5,0,15"
-                        ForegroundColor="{DynamicResource Primary}"
-                        IsIndeterminate="True"
-                        IsVisible="False"
-                        StrokeWidth="5" />
-                    <i:Icon
-                        Margin="8,5,0,15"
-                        FontSize="16"
-                        Foreground="Green"
-                        Value="fa-check" />
+        BoxShadow="0 0 9 0 Gray"
+        CornerRadius="4">
+        <Panel>
+			<Button
+			   Margin="5"
+			   HorizontalAlignment="Left"
+			   VerticalAlignment="Top"
+			   Classes="IconButton"
+			   Command="{Binding NavigateBack}">
+				<i:Icon Value="fa-arrow-left" />
+			</Button>
+            <Grid ColumnDefinitions="0.5*,4*,4*,0.5*" RowDefinitions="0.5*,4*,*,0.5*">
+                <TextBlock
+                    Grid.Column="1"
+                    Grid.ColumnSpan="2"
+                    Margin="10,20,10,15"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="16"
+                    FontWeight="Bold"
+                    Text="EQUIPMENT CHECK" />
+                <TextBlock
+                    Grid.Column="1"
+                    Grid.ColumnSpan="2"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Bottom"
+                    FontSize="12"
+                    Text="We will check your internet connection, video and microphone" />
+                <Border
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Width="300"
+                    Height="170"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Background="{DynamicResource Background}"
+                    BorderBrush="{DynamicResource Primary}"
+                    BorderThickness="1.5"
+                    CornerRadius="4">
+                    <Image Source="{Binding CameraBitmap}" />
+                </Border>
+                <StackPanel
+                    Grid.Row="1"
+                    Grid.Column="2"
+                    Margin="10,45,10,0">
+                    <TextBlock FontWeight="SemiBold" Text="Video source" />
+                    <StackPanel Orientation="Horizontal">
+                        <ComboBox
+                            Width="250"
+                            Margin="0,5,0,15"
+                            HorizontalContentAlignment="Left"
+                            Items="{Binding VideoDevices}"
+                            SelectedIndex="0">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
+                                        <i:Icon Margin="0,0,5,0" Value="fa-camera" />
+                                        <TextBlock Text="{Binding}" />
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
+                        <ProgressRing
+                            Width="30"
+                            Height="30"
+                            Margin="8,5,0,15"
+                            ForegroundColor="{DynamicResource Primary}"
+                            IsIndeterminate="True"
+                            IsVisible="False"
+                            StrokeWidth="5" />
+                        <i:Icon
+                            Margin="8,5,0,15"
+                            FontSize="16"
+                            Foreground="Green"
+                            Value="fa-check" />
+                    </StackPanel>
+                    <TextBlock FontWeight="SemiBold" Text="Microphone source" />
+                    <StackPanel Orientation="Horizontal">
+                        <ComboBox
+                            Width="250"
+                            Margin="0,5,0,15"
+                            HorizontalContentAlignment="Left"
+                            Items="{Binding InputDevices}"
+                            SelectedIndex="0">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
+                                        <i:Icon Margin="0,0,5,0" Value="fa-microphone" />
+                                        <TextBlock Text="{Binding Name}" />
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
+                        <i:Icon
+                            Margin="8,5,0,15"
+                            FontSize="16"
+                            Foreground="Green"
+                            Value="fa-check" />
+                    </StackPanel>
+                    <TextBlock FontWeight="SemiBold" Text="Audio output" />
+                    <StackPanel Orientation="Horizontal">
+                        <ComboBox
+                            Width="250"
+                            Margin="0,5,0,15"
+                            HorizontalContentAlignment="Left"
+                            Items="{Binding OutputDevices}"
+                            SelectedIndex="0">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
+                                        <i:Icon Margin="0,0,5,0" Value="fa-headphones" />
+                                        <TextBlock Text="{Binding Name}" />
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
+                        <i:Icon
+                            Margin="8,5,0,15"
+                            FontSize="16"
+                            Foreground="Green"
+                            Value="fa-check" />
+                    </StackPanel>
                 </StackPanel>
-                <TextBlock FontWeight="SemiBold" Text="Microphone source" />
-                <StackPanel Orientation="Horizontal">
-                    <ComboBox
-                        Width="250"
-                        Margin="0,5,0,15"
-                        HorizontalContentAlignment="Left"
-                        Items="{Binding InputDevices}"
-                        SelectedIndex="0">
-                        <ComboBox.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
-                                    <i:Icon Margin="0,0,5,0" Value="fa-microphone" />
-                                    <TextBlock Text="{Binding Name}" />
-                                </StackPanel>
-                            </DataTemplate>
-                        </ComboBox.ItemTemplate>
-                    </ComboBox>
-                    <i:Icon
-                        Margin="8,5,0,15"
-                        FontSize="16"
-                        Foreground="Green"
-                        Value="fa-check" />
+                <lvc:PieChart
+                    Grid.Row="3"
+                    Grid.Column="1"
+                    Grid.ColumnSpan="2"
+                    Height="250"
+                    Margin="0,0,30,0"
+                    AutoUpdateEnabled="True"
+                    InitialRotation="180"
+                    IsVisible="{Binding !isSpeedTestRunning^}"
+                    LegendPosition="Hidden"
+                    MaxAngle="180"
+                    Series="{Binding ChartBuilder}"
+                    TooltipPosition="Hidden"
+                    Total="20" />
+                <StackPanel
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Grid.ColumnSpan="2"
+                    HorizontalAlignment="Center"
+                    IsVisible="{Binding isSpeedTestRunning^}">
+                    <ProgressRing Foreground="{DynamicResource Primary}" IsIndeterminate="True" />
+                    <TextBlock Margin="5" Text="Checking internet speed..." />
                 </StackPanel>
-                <TextBlock FontWeight="SemiBold" Text="Audio output" />
-                <StackPanel Orientation="Horizontal">
-                    <ComboBox
-                        Width="250"
-                        Margin="0,5,0,15"
-                        HorizontalContentAlignment="Left"
-                        Items="{Binding OutputDevices}"
-                        SelectedIndex="0">
-                        <ComboBox.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
-                                    <i:Icon Margin="0,0,5,0" Value="fa-headphones" />
-                                    <TextBlock Text="{Binding Name}" />
-                                </StackPanel>
-                            </DataTemplate>
-                        </ComboBox.ItemTemplate>
-                    </ComboBox>
-                    <i:Icon
-                        Margin="8,5,0,15"
-                        FontSize="16"
-                        Foreground="Green"
-                        Value="fa-check" />
-                </StackPanel>
-            </StackPanel>
-            <lvc:PieChart
-                Grid.Row="3"
-                Grid.Column="1"
-                Grid.ColumnSpan="2"
-                Height="250"
-                Margin="0,0,30,0"
-                AutoUpdateEnabled="True"
-                InitialRotation="180"
-                IsVisible="{Binding !isSpeedTestRunning^}"
-                LegendPosition="Hidden"
-                MaxAngle="180"
-                Series="{Binding ChartBuilder}"
-                TooltipPosition="Hidden"
-                Total="20" />
-            <StackPanel
-                Grid.Row="2"
-                Grid.Column="1"
-                Grid.ColumnSpan="2"
-                HorizontalAlignment="Center"
-                IsVisible="{Binding isSpeedTestRunning^}">
-                <ProgressRing Foreground="{DynamicResource Primary}" IsIndeterminate="True" />
-                <TextBlock Margin="5" Text="Checking internet speed..." />
-            </StackPanel>
-            <Button
-                Grid.Row="2"
-				Grid.RowSpan="2"
-                Grid.Column="2"
-                Margin="20"
-                Padding="35,9,35,10"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Bottom"
-                Content="Next"
-				Command="{Binding NextCommand}"/>
-        </Grid>
+                <Button
+                    Grid.Row="2"
+                    Grid.RowSpan="2"
+                    Grid.Column="2"
+                    Margin="0 20"
+                    Padding="35,9,35,10"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
+                    Command="{Binding NextCommand}"
+                    Content="Next" />
+            </Grid>
+
+        </Panel>
     </Border>
 
 </UserControl>
