--- a/DesktopClient/Views/EnterVerificationCodeView.axaml
+++ b/DesktopClient/Views/EnterVerificationCodeView.axaml
@@ -54,6 +54,8 @@
                         TextWrapping="Wrap" />
 
                     <TextBox
+						Padding="0"
+						VerticalContentAlignment="Center"
                         Width="100"
                         Margin="10,0,10,20"
                         VerticalAlignment="Center"
