--- a/DesktopClient/Views/InformationCheckView.axaml
+++ b/DesktopClient/Views/InformationCheckView.axaml
@@ -19,6 +19,7 @@
         CornerRadius="4">
         <Panel>
             <Button
+				ZIndex="5"
                 Margin="5"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
