--- a/DesktopClient/App.axaml
+++ b/DesktopClient/App.axaml
@@ -1,30 +1,32 @@
-<Application xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:DesktopClient"
-             x:Class="DesktopClient.App">
-	<Application.DataTemplates>
-		<local:ViewLocator/>
-	</Application.DataTemplates>
+<Application
+    x:Class="DesktopClient.App"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:DesktopClient">
+    <Application.DataTemplates>
+        <local:ViewLocator />
+    </Application.DataTemplates>
 
-	<Application.Styles>
-		<FluentTheme Mode="Light"/>
-		<StyleInclude Source="/Styles/TextBox.axaml"/>
-		<StyleInclude Source="/Styles/NotificationCard.axaml"/>
-		<StyleInclude Source="/Styles/Button.axaml"/>
-		<StyleInclude Source="/Styles/HyperLink.axaml"/>
-		<StyleInclude Source="avares://AvaloniaProgressRing/Styles/ProgressRing.xaml"/>
-		<StyleInclude Source="avares://Aura.UI.FluentTheme/AuraUI.xaml"/>
-	</Application.Styles>
+    <Application.Styles>
+        <FluentTheme Mode="Light" />
+        <StyleInclude Source="/Styles/TextBox.axaml" />
+        <StyleInclude Source="/Styles/NotificationCard.axaml" />
+        <StyleInclude Source="/Styles/Button.axaml" />
+        <StyleInclude Source="/Styles/HyperLink.axaml" />
+        <StyleInclude Source="avares://AvaloniaProgressRing/Styles/ProgressRing.xaml" />
+        <StyleInclude Source="avares://Aura.UI.FluentTheme/AuraUI.xaml" />
+        <StyleInclude Source="avares://DesktopClient/CustomControls/Question.axaml" />
+    </Application.Styles>
 
-	<Application.Resources>
-		<ResourceDictionary>
-			<SolidColorBrush x:Key="Primary" Color="#111111"/>
-			<SolidColorBrush x:Key="Secoundary" Color="#BC31EA"/>
-			<SolidColorBrush x:Key="Hover" Color="#767676"/>
-			<SolidColorBrush x:Key="Background" Color="#F4F4F4"/>
-			<SolidColorBrush x:Key="Foreground" Color="#EEEEEE"/>
-			<SolidColorBrush x:Key="Border" Color="#AAAAAA"/>
-			
-		</ResourceDictionary>
-	</Application.Resources>
+    <Application.Resources>
+        <ResourceDictionary>
+            <SolidColorBrush x:Key="Primary" Color="#111111" />
+            <SolidColorBrush x:Key="Secoundary" Color="#BC31EA" />
+            <SolidColorBrush x:Key="Hover" Color="#767676" />
+            <SolidColorBrush x:Key="Background" Color="#F4F4F4" />
+            <SolidColorBrush x:Key="Foreground" Color="#EEEEEE" />
+            <SolidColorBrush x:Key="Border" Color="#AAAAAA" />
+
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
