--- a/DesktopClient/Views/StepManagerView.axaml
+++ b/DesktopClient/Views/StepManagerView.axaml
@@ -77,6 +77,7 @@
                         <TextBlock
                             Margin="55,55,0,0"
                             FontSize="12"
+                            FontWeight="Bold"
                             Text="Start Exam" />
                     </StackPanel>
                     <Canvas Margin="0,30,0,0">
@@ -90,22 +91,22 @@
                             x:Name="LoginCtrl"
                             Canvas.Left="20"
                             Canvas.Top="60"
-							Content="{Binding LoginCtrl}"/>
+                            Content="{Binding LoginCtrl}" />
                         <ContentPresenter
                             x:Name="ExamCodeCtrl"
                             Canvas.Left="20"
                             Canvas.Top="130"
-							Content="{Binding ExamCodeCtrl}"/>
+                            Content="{Binding ExamCodeCtrl}" />
                         <ContentPresenter
                             x:Name="SystemCheckCtrl"
                             Canvas.Left="20"
                             Canvas.Top="200"
-							Content="{Binding SystemCheckCtrl}"/>
+                            Content="{Binding SystemCheckCtrl}" />
                         <ContentPresenter
                             x:Name="InfoCheckCtrl"
                             Canvas.Left="20"
                             Canvas.Top="270"
-							Content="{Binding InfoCheckCtrl}"/>
+                            Content="{Binding InfoCheckCtrl}" />
                         <ContentPresenter
                             x:Name="StartExamCtrl"
                             Canvas.Left="20"
