--- a/DesktopClient/Views/SystemRequirmentsView.axaml
+++ b/DesktopClient/Views/SystemRequirmentsView.axaml
@@ -25,14 +25,14 @@
         BoxShadow="0 0 9 0 Gray"
         CornerRadius="4">
         <Panel>
-			<Button
-			   Margin="5"
-			   HorizontalAlignment="Left"
-			   VerticalAlignment="Top"
-			   Classes="IconButton"
-			   Command="{Binding NavigateBack}">
-				<i:Icon Value="fa-arrow-left" />
-			</Button>
+            <Button
+                Margin="5"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Classes="IconButton"
+                Command="{Binding NavigateBack}">
+                <i:Icon Value="fa-arrow-left" />
+            </Button>
             <Grid ColumnDefinitions="0.5*,4*,4*,0.5*" RowDefinitions="0.5*,4*,*,0.5*">
                 <TextBlock
                     Grid.Column="1"
@@ -84,6 +84,7 @@
                                 </DataTemplate>
                             </ComboBox.ItemTemplate>
                         </ComboBox>
+                        <!--  ReSharper disable once Xaml.InvalidResourceType  -->
                         <ProgressRing
                             Width="30"
                             Height="30"
@@ -172,7 +173,7 @@
                     Grid.Row="2"
                     Grid.RowSpan="2"
                     Grid.Column="2"
-                    Margin="0 20"
+                    Margin="0,20"
                     Padding="35,9,35,10"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Bottom"
