--- a/DesktopClient/Views/ExamRoomView.axaml
+++ b/DesktopClient/Views/ExamRoomView.axaml
@@ -60,6 +60,7 @@
                         <Button
                             Margin="10,2,10,2"
                             Classes="IconButton"
+                            Command="{Binding SubmitCommand}"
                             ToolTip.Tip="Submit">
                             <StackPanel>
                                 <i:Icon Foreground="Green" Value="far fa-check-circle" />
@@ -74,6 +75,7 @@
                         <Button
                             Margin="10,2,10,2"
                             Classes="IconButton"
+                            Command="{Binding MessagePopupCommand}"
                             ToolTip.Tip="Messages">
                             <StackPanel>
                                 <i:Icon Value="far fa-envelope" />
@@ -88,6 +90,7 @@
                             Margin="10,2,10,2"
                             VerticalAlignment="Center"
                             Classes="IconButton"
+                            Command="{Binding InfoCommand}"
                             ToolTip.Tip="Info">
                             <StackPanel>
                                 <i:Icon Value="fa-info" />
@@ -107,6 +110,7 @@
                         <Button
                             Margin="20,2,20,2"
                             Classes="IconButton"
+                            Command="{Binding ExitCommand}"
                             ToolTip.Tip="Exit">
                             <StackPanel>
                                 <i:Icon Foreground="Crimson" Value="fa-sign-out-alt" />
@@ -143,13 +147,14 @@
             <Button
                 Margin="0,0,5,0"
                 Classes="IconButton"
-                Command="{Binding TestCommand}"
+                Command="{Binding ZoomInCommand}"
                 ToolTip.ShowDelay="800"
                 ToolTip.Tip="Zoom In">
                 <i:Icon Value="fa-plus" />
             </Button>
             <Button
                 Classes="IconButton"
+                Command="{Binding ZoomOutCommand}"
                 ToolTip.ShowDelay="800"
                 ToolTip.Tip="Zoom Out">
                 <i:Icon Value="fa-minus" />
