--- a/DesktopClient/App.axaml
+++ b/DesktopClient/App.axaml
@@ -16,6 +16,8 @@
         <StyleInclude Source="avares://AvaloniaProgressRing/Styles/ProgressRing.xaml" />
         <StyleInclude Source="avares://Aura.UI.FluentTheme/AuraUI.xaml" />
         <StyleInclude Source="avares://DesktopClient/CustomControls/Question.axaml" />
+		<StyleInclude Source="avares://DesktopClient/CustomControls/Exercise.axaml"/>
+		
     </Application.Styles>
 
     <Application.Resources>
