fix: converted all absolute paths to relative ones

--- a/DesktopClient/Views/RichTextBoxView.axaml
+++ b/DesktopClient/Views/RichTextBoxView.axaml
@@ -7,6 +7,6 @@
 			 xmlns:cm="using:DesktopClient.CustomControls"
              x:Class="DesktopClient.Views.RichTextBoxView">
 	<Grid Background="{DynamicResource Background}">
-		<cm:Exercise  Title="hey" Description="Wow"/>
+		<ContentPresenter Content="{Binding Content}"/>
 	</Grid>
 </UserControl>
